Actualizacion de arbol de archivos

--- a/PlataformaDisco/Evolve.html
+++ b/PlataformaDisco/Evolve.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imagine Dragons</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" href="icons/f104f846351d61cee8ef66f9d7fc5f09.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +16,7 @@
   <body class="bodyEvolve">
     <div class="TitleMain">
       <img
-        src="TitleLogSing/Imagine-Dragons-Logo.png"
+        src="assets/imagenes/titleLogSing/Imagine-Dragons-Logo.png"
         alt=""
         class="imgTitle"
       />
@@ -24,7 +24,7 @@
     <div class="sidebar">
       <div class="user">
         <img
-          src="iconoUser/imagine-dragons-lohan.jpg"
+          src="assets/imagenes/iconoUser/imagine-dragons-lohan.jpg"
           alt="User Icon"
           class="userIco"
         />
@@ -38,7 +38,7 @@
           <a href="addSong.html"> Agrega canciones </a>
         </div>
         <div class="section">
-          <a href="Addalbum.html"> agrega albunes </a>
+          <a href="addalbum.html"> agrega albunes </a>
         </div>
         <div class="section">
           <a href="editAlbum.html"> Editar album </a>
@@ -47,16 +47,20 @@
           <a href="index.html"> Más Albunes </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Iniciar Sesion </a>
+          <a href="logIn.html"> Iniciar Sesion </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Log out </a>
+          <a href="logIn.html"> Log out </a>
         </div>
       </div>
     </div>
     <div class="Evolve">
-      <h2>Album Origin</h2>
-      <img src="Evolve/EVOLVE COVER.jpg" alt="AlbumEvolve" class="imgEvolve" />
+      <h2>Album Evolve</h2>
+      <img
+        src="assets/discos/evolve/EVOLVE COVER.jpg"
+        alt="AlbumEvolve"
+        class="imgEvolve"
+      />
       <p class="pEvolve">
         Evolve (estilizado como ƎVOLVE ) es el tercer álbum de estudio de la
         bandaestadounidense de pop rock Imagine Dragons , lanzado el 23 de junio
@@ -89,7 +93,7 @@
           <audio
             class="song"
             controls
-            src="Evolve/Imagine Dragons  I Dont Know Why.mp3"
+            src="assets/discos/evolve/Imagine Dragons  I Dont Know Why.mp3"
           ></audio>
         </li>
         <li>
@@ -97,7 +101,7 @@
           <audio
             class="song"
             controls
-            src="Evolve/Imagine Dragons - Whatever It Takes (Audio).mp3"
+            src="assets/discos/evolve/Imagine Dragons - Whatever It Takes (Audio).mp3"
           ></audio>
         </li>
         <li>
@@ -105,7 +109,7 @@
           <audio
             class="song"
             controls
-            src="Evolve/Imagine Dragons - Believer (Audio).mp3"
+            src="assets/discos/evolve/Imagine Dragons - Believer (Audio).mp3"
           ></audio>
         </li>
         <li>
@@ -113,7 +117,7 @@
           <audio
             class="song"
             controls=""
-            src="Evolve/Imagine Dragons - Walking The Wire Copy (Audio).mp3"
+            src="assets/discos/evolve/Imagine Dragons - Walking The Wire Copy (Audio).mp3"
           ></audio>
         </li>
         <li>
@@ -121,7 +125,7 @@
           <audio
             class="song"
             controls
-            src="Evolve/Imagine Dragons - Rise Up.mp3"
+            src="assets/discos/evolve/Imagine Dragons - Rise Up.mp3"
           ></audio>
         </li>
         <li>
@@ -129,7 +133,7 @@
           <audio
             class="song"
             controls
-            src="Evolve/Imagine Dragons  Ill Make It Up To You [Exclusive].mp3"
+            src="assets/discos/evolve/Imagine Dragons  Ill Make It Up To You [Exclusive].mp3"
           ></audio>
         </li>
         <li>
@@ -137,7 +141,7 @@
           <audio
             class="song"
             controls
-            src="Evolve/Imagine Dragons Yesterday (Audio).mp3"
+            src="assets/discos/evolve/Imagine Dragons Yesterday (Audio).mp3"
           ></audio>
         </li>
         <li>
@@ -145,7 +149,7 @@
           <audio
             class="song"
             controls
-            src="Evolve/Mouth Of The River - Imagine Dragons (Audio).mp3"
+            src="assets/discos/evolve/Mouth Of The River - Imagine Dragons (Audio).mp3"
           ></audio>
         </li>
         <li>
@@ -153,7 +157,7 @@
           <audio
             class="song"
             controls
-            src="Evolve/Imagine Dragons - Thunder (Audio).mp3"
+            src="assets/discos/evolve/Imagine Dragons - Thunder (Audio).mp3"
           ></audio>
         </li>
         <li>
@@ -161,7 +165,7 @@
           <audio
             class="song"
             controls
-            src="Evolve/Imagine Dragons  Start Over [Exclusive].mp3"
+            src="assets/discos/evolve/Imagine Dragons  Start Over [Exclusive].mp3"
           ></audio>
         </li>
         <li>
@@ -169,7 +173,7 @@
           <audio
             class="song"
             controls
-            src="Evolve/Imagine Dragons - Dancing in the Dark.mp3"
+            src="assets/discos/evolve/Imagine Dragons - Dancing in the Dark.mp3"
           ></audio>
         </li>
       </ol>
