--- a/PlataformaDisco/Origins.html
+++ b/PlataformaDisco/Origins.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imagine Dragons</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" href="icons/f104f846351d61cee8ef66f9d7fc5f09.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +16,7 @@
   <body class="bodyEvolve">
     <div class="TitleMain">
       <img
-        src="TitleLogSing/Imagine-Dragons-Logo.png"
+        src="assets/imagenes/titleLogSing/Imagine-Dragons-Logo.png"
         alt=""
         class="imgTitle"
       />
@@ -24,7 +24,7 @@
     <div class="sidebar">
       <div class="user">
         <img
-          src="iconoUser/imagine-dragons-lohan.jpg"
+          src="assets/imagenes/iconoUser/imagine-dragons-lohan.jpg"
           alt="User Icon"
           class="userIco"
         />
@@ -38,7 +38,7 @@
           <a href="addSong.html"> Agrega canciones </a>
         </div>
         <div class="section">
-          <a href="Addalbum.html"> agrega albunes </a>
+          <a href="addalbum.html"> agrega albunes </a>
         </div>
         <div class="section">
           <a href="editAlbum.html"> Editar album </a>
@@ -47,17 +47,17 @@
           <a href="index.html"> Más Albunes </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Iniciar Sesion </a>
+          <a href="logIn.html"> Iniciar Sesion </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Log out </a>
+          <a href="logIn.html"> Log out </a>
         </div>
       </div>
     </div>
     <div class="Evolve">
       <h2>Album Origins</h2>
       <img
-        src="Origins/Origins_cover.jpg"
+        src="assets/discos/origins/Origins_cover.jpg"
         alt="AlbumOrigin"
         class="imgEvolve"
       />
@@ -83,43 +83,55 @@
           <audio
             class="song"
             controls
-            src="Origins/Imagine Dragons - Natural.mp3"
+            src="assets/discos/origins/Imagine Dragons - Natural.mp3"
           ></audio>
         </li>
         <li>
           Boomerang
-          <audio class="song" controls src="Origins/Boomerang.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/origins/Boomerang.mp3"
+          ></audio>
         </li>
         <li>
           Machine
           <audio
             class="song"
             controls
-            src="Origins/Imagine Dragons - Machine (Audio).mp3"
+            src="assets/discos/origins/Imagine Dragons - Machine (Audio).mp3"
           ></audio>
         </li>
         <li>
           Cool Out
-          <audio class="song" controls src="Origins/Cool Out.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/origins/Cool Out.mp3"
+          ></audio>
         </li>
         <li>
           Bad Liar
           <audio
             class="song"
             controls
-            src="Origins/Imagine Dragons - Bad Liar.mp3"
+            src="assets/discos/origins/Imagine Dragons - Bad Liar.mp3"
           ></audio>
         </li>
         <li>
           West Coast
-          <audio class="song" controls src="Origins/West Coast.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/origins/West Coast.mp3"
+          ></audio>
         </li>
         <li>
           Zero
           <audio
             class="song"
             controls
-            src="Origins/Imagine Dragons - Zero (From the Original Motion Picture _Ralph Breaks The Internet_).mp3"
+            src="assets/discos/origins/Imagine Dragons - Zero (From the Original Motion Picture _Ralph Breaks The Internet_).mp3"
           ></audio>
         </li>
         <li>
@@ -127,24 +139,40 @@
           <audio
             class="song"
             controls
-            src="Origins/Bullet In A Gun.mp3"
+            src="assets/discos/origins/Bullet In A Gun.mp3"
           ></audio>
         </li>
         <li>
           Digital
-          <audio class="song" controls src="Origins/Digital.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/origins/Digital.mp3"
+          ></audio>
         </li>
         <li>
           Only
-          <audio class="song" controls src="Origins/Only.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/origins/Only.mp3"
+          ></audio>
         </li>
         <li>
           Stuck
-          <audio class="song" controls src="Origins/Stuck.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/origins/Stuck.mp3"
+          ></audio>
         </li>
         <li>
           Love
-          <audio class="song" controls src="Origins/Love.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/origins/Love.mp3"
+          ></audio>
         </li>
       </ol>
     </div>
