--- a/PlataformaDisco/SingUp.html
+++ b/PlataformaDisco/SingUp.html
@@ -6,8 +6,8 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Imagine Dragons</title>
-      <link rel="stylesheet" href="style.css" />
-      <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
+      <link rel="stylesheet" href="styles/style.css" />
+      <link rel="icon" href="icons/f104f846351d61cee8ef66f9d7fc5f09.ico" />
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link
@@ -19,7 +19,7 @@
     <body class="sing_up">
       <div class="TitleRegis">
         <img
-          src="TitleLogSing/Imagine-Dragons-Logo.png"
+          src="assets/imagenes/titleLogSing/Imagine-Dragons-Logo.png"
           alt=""
           class="imgTitle"
         />
@@ -72,7 +72,7 @@
           <button type="submit" class="submit" id="cancelar">Cancelar</button>
         </form>
       </div>
-      <script src="valueForm.js"></script>
+      <script src="scripts/valueForm.js"></script>
     </body>
   </html>
 
