--- a/PlataformaDisco/Tours.html
+++ b/PlataformaDisco/Tours.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imagine Dragons</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" href="icons/f104f846351d61cee8ef66f9d7fc5f09.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +21,7 @@
   </head>
   <body class="bgTour">
     <div class="titleTour">
-      <img src="TitleLogSing/images.jpeg" alt="" class="imgTitle" />
+      <img src="assets/imagenes/titleLogSing/images.jpeg" alt="" class="imgTitle" />
     </div>
     <div class="iSpan">
       <i></i>
@@ -30,7 +30,7 @@
     <div class="sidebar">
       <div class="user">
         <img
-          src="iconoUser/imagine-dragons-lohan.jpg"
+          src="assets/imagenes/iconoUser/imagine-dragons-lohan.jpg"
           alt="User Icon"
           class="userIco"
         />
@@ -44,16 +44,16 @@
           <a href="index.html"> Más Albunes </a>
         </div>
         <div class="section">
-          <a href="Addalbum.html"> Agrega albunes </a>
+          <a href="addalbum.html"> Agrega albunes </a>
         </div>
         <div class="section">
           <a href="editAlbum.html"> Editar album </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Iniciar Sesion </a>
+          <a href="logIn.html"> Iniciar Sesion </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Log out </a>
+          <a href="logIn.html"> Log out </a>
         </div>
       </div>
     </div>
@@ -64,34 +64,34 @@
       </h1>
       <div class="date">
         <h1>08/09/24 Lima</h1>
-        <img class="w-10" src="PERU_bANDERA.png" alt="bICO" />
+        <img class="w-10" src="assets/imagenes/icons/PERU_bANDERA.png" alt="bICO" />
         <button class="buy" lugar="Lima">Comprar entrada</button>
       </div>
       <div class="date">
         <h1>10/09 Sao Paulo</h1>
-        <img class="w-10" src="brasil-bandera-boton.png" alt="bICO" />
+        <img class="w-10" src="assets/imagenes/icons/brasil-bandera-boton.png" alt="bICO" />
         <button class="buy" lugar="Sao Paulo">Comprar entrada</button>
       </div>
       <div class="date">
         <h1>12/09 Buenos Aires</h1>
-        <img class="w-10" src="arg.png" alt="bICO" />
+        <img class="w-10" src="assets/imagenes/icons/arg.png" alt="bICO" />
         <button class="buy" lugar="Buenos Aires">Comprar entrada</button>
       </div>
       <div class="date">
         <h1>14/09 Cordoba</h1>
-        <img class="w-10" src="arg.png" alt="bICO" />
+        <img class="w-10" src="assets/imagenes/icons/arg.png" alt="bICO" />
         <button class="buy" lugar="Cordoba">Comprar entrada</button>
       </div>
       <div class="date">
         <h1>15/09 Montevideo</h1>
         <img
           class="w-10"
-          src="e59be84c157b5a4af7e1f3709d4aad8d.png"
+          src="assets/imagenes/icons/e59be84c157b5a4af7e1f3709d4aad8d.png"
           alt="bICO"
         />
         <button class="buy" lugar="Montevideo">Comprar entrada</button>
       </div>
     </div>
-    <script src="tours.js"></script>
+    <script src="scripts/tours.js"></script>
   </body>
 </html>
