--- a/PlataformaDisco/editAlbum.html
+++ b/PlataformaDisco/editAlbum.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imagine Dragons</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" href="icons/f104f846351d61cee8ef66f9d7fc5f09.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,7 +18,7 @@
     <div class="sidebar">
       <div class="user">
         <img
-          src="iconoUser/imagine-dragons-lohan.jpg"
+          src="assets/imagenes/iconoUser/imagine-dragons-lohan.jpg"
           alt="User Icon"
           class="userIco"
         />
@@ -32,13 +32,13 @@
           <a href="index.html"> Más Albunes </a>
         </div>
         <div class="section">
-          <a href="Addalbum.html"> Agrega albunes </a>
+          <a href="addalbum.html"> Agrega albunes </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Iniciar Sesion </a>
+          <a href="logIn.html"> Iniciar Sesion </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Log out </a>
+          <a href="logIn.html"> Log out </a>
         </div>
       </div>
     </div>
@@ -77,6 +77,6 @@
         <button type="submit" class="submit" id="cancelar">Cancelar</button>
       </form>
     </div>
-    <script src="valueForm.js"></script>
+    <script src="scripts/valueForm.js"></script>
   </body>
 </html>
