--- a/PlataformaDisco/nigthVision.html
+++ b/PlataformaDisco/nigthVision.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imagine Dragons</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" href="icons/f104f846351d61cee8ef66f9d7fc5f09.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +16,7 @@
   <body class="bodyEvolve">
     <div class="TitleMain">
       <img
-        src="TitleLogSing/Imagine-Dragons-Logo.png"
+        src="assets/imagenes/titleLogSing/Imagine-Dragons-Logo.png"
         alt=""
         class="imgTitle"
       />
@@ -24,7 +24,7 @@
     <div class="sidebar">
       <div class="user">
         <img
-          src="iconoUser/imagine-dragons-lohan.jpg"
+          src="assets/imagenes/iconoUser/imagine-dragons-lohan.jpg"
           alt="User Icon"
           class="userIco"
         />
@@ -38,7 +38,7 @@
           <a href="addSong.html"> Agrega canciones </a>
         </div>
         <div class="section">
-          <a href="Addalbum.html"> agrega albunes </a>
+          <a href="addalbum.html"> agrega albunes </a>
         </div>
         <div class="section">
           <a href="editAlbum.html"> Editar album </a>
@@ -47,18 +47,18 @@
           <a href="index.html"> Más Albunes </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Iniciar Sesion </a>
+          <a href="logIn.html"> Iniciar Sesion </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Log out </a>
+          <a href="logIn.html"> Log out </a>
         </div>
       </div>
     </div>
     <div class="Evolve">
       <h2>Album Nigth vision</h2>
       <img
-        src="nigthVision/zuyerphzzf04b_600.jpg"
-        alt="AlbumEvolve"
+        src="assets/discos/nigthVision/zuyerphzzf04b_600.jpg"
+        alt="AlbumNigthVision"
         class="imgEvolve"
       />
       <p class="pEvolve">
@@ -98,7 +98,7 @@
           <audio
             class="song"
             controls
-            src="nigthVision/Imagine Dragons - Radioactive.mp3"
+            src="assets/discos/nigthVision/Imagine Dragons - Radioactive.mp3"
           ></audio>
         </li>
         <li>
@@ -106,7 +106,7 @@
           <audio
             class="song"
             controls
-            src="nigthVision/Imagine Dragons - Tiptoe (Lyric Video).mp3"
+            src="assets/discos/nigthVision/Imagine Dragons - Tiptoe (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
@@ -114,7 +114,7 @@
           <audio
             class="song"
             controls
-            src="nigthVision/Imagine Dragons - It's Time (Official Music Video).mp3"
+            src="assets/discos/nigthVision/Imagine Dragons - It's Time (Official Music Video).mp3"
           ></audio>
         </li>
         <li>
@@ -122,7 +122,7 @@
           <audio
             class="song"
             controls=""
-            src="nigthVision/Imagine Dragons - Demons (Lyric Video).mp3"
+            src="assets/discos/nigthVision/Imagine Dragons - Demons (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
@@ -130,7 +130,7 @@
           <audio
             class="song"
             controls
-            src="nigthVision/Imagine Dragons - On Top Of The World (Official Music Video).mp3"
+            src="assets/discos/nigthVision/Imagine Dragons - On Top Of The World (Official Music Video).mp3"
           ></audio>
         </li>
         <li>
@@ -138,7 +138,7 @@
           <audio
             class="song"
             controls
-            src="nigthVision/Imagine Dragons - Amsterdam (Lyric Video).mp3"
+            src="assets/discos/nigthVision/Imagine Dragons - Amsterdam (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
@@ -146,7 +146,7 @@
           <audio
             class="song"
             controls
-            src="nigthVision/Imagine Dragons - Hear Me (Lyric Video).mp3"
+            src="assets/discos/nigthVision/Imagine Dragons - Hear Me (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
@@ -154,7 +154,7 @@
           <audio
             class="song"
             controls
-            src="nigthVision/Imagine Dragons - Every Night (Lyric Video).mp3"
+            src="assets/discos/nigthVision/Imagine Dragons - Every Night (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
@@ -162,7 +162,7 @@
           <audio
             class="song"
             controls
-            src="nigthVision/Imagine Dragons - Bleeding Out (Lyric Video).mp3"
+            src="assets/discos/nigthVision/Imagine Dragons - Bleeding Out (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
@@ -170,7 +170,7 @@
           <audio
             class="song"
             controls
-            src="nigthVision/Imagine Dragons - Underdog (Lyric Video).mp3"
+            src="assets/discos/nigthVision/Imagine Dragons - Underdog (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
@@ -178,7 +178,7 @@
           <audio
             class="song"
             controls
-            src="nigthVision/Imagine Dragons - Nothing Left To Say (Art Film).mp3"
+            src="assets/discos/nigthVision/Imagine Dragons - Nothing Left To Say (Art Film).mp3"
           ></audio>
         </li>
       </ol>
