--- a/PlataformaDisco/smokeMirrors.html
+++ b/PlataformaDisco/smokeMirrors.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imagine Dragons</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" href="icons/f104f846351d61cee8ef66f9d7fc5f09.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +16,7 @@
   <body class="bodyEvolve">
     <div class="TitleMain">
       <img
-        src="TitleLogSing/Imagine-Dragons-Logo.png"
+        src="assets/imagenes/titleLogSing/Imagine-Dragons-Logo.png"
         alt=""
         class="imgTitle"
       />
@@ -24,7 +24,7 @@
     <div class="sidebar">
       <div class="user">
         <img
-          src="iconoUser/imagine-dragons-lohan.jpg"
+          src="assets/imagenes/iconoUser/imagine-dragons-lohan.jpg"
           alt="User Icon"
           class="userIco"
         />
@@ -38,7 +38,7 @@
           <a href="addSong.html"> Agrega canciones </a>
         </div>
         <div class="section">
-          <a href="Addalbum.html"> agrega albunes </a>
+          <a href="addalbum.html"> agrega albunes </a>
         </div>
         <div class="section">
           <a href="editAlbum.html"> Editar album </a>
@@ -47,18 +47,18 @@
           <a href="index.html"> Más Albunes </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Iniciar Sesion </a>
+          <a href="logIn.html"> Iniciar Sesion </a>
         </div>
         <div class="section">
-          <a href="LogIn.html"> Log out </a>
+          <a href="logIn.html"> Log out </a>
         </div>
       </div>
     </div>
     <div class="Evolve">
       <h2>Album Smoke + Mirrors</h2>
       <img
-        src="smokeMirrors/0060254762377_600.jpg"
-        alt="AlbumEvolve"
+        src="assets/discos/smokeMirrors/0060254762377_600.jpg"
+        alt="AlbumSmokeMirrors"
         class="imgEvolve"
       />
       <p class="pEvolve">
@@ -90,7 +90,7 @@
           <audio
             class="song"
             controls
-            src="smokeMirrors/Imagine Dragons - Shots.mp3"
+            src="assets/discos/smokeMirrors/Imagine Dragons - Shots.mp3"
           ></audio>
         </li>
         <li>
@@ -98,7 +98,7 @@
           <audio
             class="song"
             controls
-            src="smokeMirrors/Imagine Dragons - Gold (Official Music Video).mp3"
+            src="assets/discos/smokeMirrors/Imagine Dragons - Gold (Official Music Video).mp3"
           ></audio>
         </li>
         <li>
@@ -106,7 +106,7 @@
           <audio
             class="song"
             controls
-            src="smokeMirrors/Smoke And Mirrors.mp3"
+            src="assets/discos/smokeMirrors/Smoke And Mirrors.mp3"
           ></audio>
         </li>
         <li>
@@ -114,7 +114,7 @@
           <audio
             class="song"
             controls=""
-            src="smokeMirrors/I’m So Sorry.mp3"
+            src="assets/discos/smokeMirrors/I’m So Sorry.mp3"
           ></audio>
         </li>
         <li>
@@ -122,48 +122,72 @@
           <audio
             class="song"
             controls
-            src="smokeMirrors/Imagine Dragons - I Bet My Life.mp3"
+            src="assets/discos/smokeMirrors/Imagine Dragons - I Bet My Life.mp3"
           ></audio>
         </li>
         <li>
           Polaroid
-          <audio class="song" controls src="smokeMirrors/Polaroid.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/smokeMirrors/Polaroid.mp3"
+          ></audio>
         </li>
         <li>
           Friction
-          <audio class="song" controls src="smokeMirrors/Friction.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/smokeMirrors/Friction.mp3"
+          ></audio>
         </li>
         <li>
           It Comes Back To You
           <audio
             class="song"
             controls
-            src="smokeMirrors/It Comes Back To You - Imagine Dragons (Audio).mp3"
+            src="assets/discos/smokeMirrors/It Comes Back To You - Imagine Dragons (Audio).mp3"
           ></audio>
         </li>
         <li>
           Dream
-          <audio class="song" controls src="smokeMirrors/Dream.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/smokeMirrors/Dream.mp3"
+          ></audio>
         </li>
         <li>
           Trouble
-          <audio class="song" controls src="smokeMirrors/Trouble.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/smokeMirrors/Trouble.mp3"
+          ></audio>
         </li>
         <li>
           Summer
-          <audio class="song" controls src="smokeMirrors/Summer.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/smokeMirrors/Summer.mp3"
+          ></audio>
         </li>
         <li>
           Hopeless Opus
           <audio
             class="song"
             controls
-            src="smokeMirrors/Hopeless Opus.mp3"
+            src="assets/discos/smokeMirrors/Hopeless Opus.mp3"
           ></audio>
         </li>
         <li>
           The Fall
-          <audio class="song" controls src="smokeMirrors/The Fall.mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="assets/discos/smokeMirrors/The Fall.mp3"
+          ></audio>
         </li>
       </ol>
     </div>
