--- a/PlataformaDisco/LogIn.html
+++ b/PlataformaDisco/LogIn.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imagine Dragons</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" href="icons/f104f846351d61cee8ef66f9d7fc5f09.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
   <body class="sing_up">
     <div class="TitleRegis">
       <img
-        src="TitleLogSing/Imagine-Dragons-Logo.png"
+        src="assets/imagenes/iconoUser/imagine-dragons-lohan.jpg"
         alt=""
         class="imgTitle"
       />
@@ -47,10 +47,10 @@
         </label>
         <button type="submit" class="submit">Inicia Sesión</button>
         <p class="signin">
-          ¿Todavia no te registraste? <a href="SingUp.html">Registrate aqui!</a>
+          ¿Todavia no te registraste? <a href="singUp.html">Registrate aqui!</a>
         </p>
       </form>
     </div>
-    <script src="valueForm.js"></script>
+    <script src="scripts/valueForm.js"></script>
   </body>
 </html>
