--- a/PlataformaDisco/LogIn.html
+++ b/PlataformaDisco/LogIn.html
@@ -17,7 +17,7 @@
   <body class="sing_up">
     <div class="TitleRegis">
       <img
-        src="assets/imagenes/iconoUser/imagine-dragons-lohan.jpg"
+        src="assets/imagenes/titleLogSing/Imagine-Dragons-Logo.png"
         alt=""
         class="imgTitle"
       />
@@ -41,6 +41,7 @@
             type="password"
             name="Pass"
             placeholder="Password"
+            minlength="6"
             maxlength="10"
             class="input"
           />
