--- a/PlataformaDisco/public/evolve.html
+++ b/PlataformaDisco/public/evolve.html
@@ -57,7 +57,7 @@
     <div class="Evolve">
       <h2>Album Evolve</h2>
       <img
-        src="assets/discos/evolve/EVOLVE COVER.jpg"
+        src="assets/tapas/EVOLVE.jpg"
         alt="AlbumEvolve"
         class="imgEvolve"
       />
@@ -178,5 +178,64 @@
         </li>
       </ol>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/public/scripts/album.js"></script>
   </body>
 </html>
+
+
+{
+  "url": "",
+  "duracion": ,
+  "titulo": ""
+},
+ {
+  "url": "assets/discos/origins/Imagine Dragons - Whatever It Takes (Audio).mp3",
+  "duracion": 199,
+  "titulo": "Whatever it Takes"
+},
+ {
+  "url": "assets/discos/origins/Imagine Dragons - Believer (Audio).mp3",
+  "duracion": 202,
+  "titulo": "Believer"
+},
+ {
+  "url": "assets/discos/origins/Imagine Dragons - Walking The Wire Copy (Audio).mp3",
+  "duracion": 232,
+  "titulo": "Walking the Wire Copy"
+},
+ {
+  "url": "assets/discos/origins/Imagine Dragons - Rise Up.mp3",
+  "duracion": 231,
+  "titulo": "Rise Up"
+},
+ {
+  "url": "assets/discos/Imagine Dragons  Ill Make It Up To You [Exclusive].mp3",
+  "duracion": 255,
+  "titulo": "Ill Make It up to You"
+},
+ {
+  "url": "assets/discos/origins/Imagine Dragons Yesterday (Audio).mp3",
+  "duracion": 195,
+  "titulo": "Yesterday"
+},
+ {
+  "url": "assets/discos/origins/Mouth Of The River - Imagine Dragons (Audio).mp3",
+  "duracion": 226,
+  "titulo": "Mouth of the River"
+},
+ {
+  "url": "assets/discos/origins/Imagine Dragons - Thunder (Audio).mp3",
+  "duracion": 192,
+  "titulo": "Thunder"
+},
+ {
+  "url": "assets/discos/origins/Imagine Dragons  Start Over [Exclusive].mp3",
+  "duracion": 123,
+  "titulo": "Start Over"
+},
+ {
+  "url": "assets/discos/origins/Imagine Dragons - Dancing in the Dark.mp3",
+  "duracion": 167,
+  "titulo": "Dancing in the Dark"
+},
