--- a/PlataformaDisco/public/index.html
+++ b/PlataformaDisco/public/index.html
@@ -38,26 +38,19 @@
       </div>
       <div class="menu">
         <div class="section">
-          <a href="addalbum.html"> Agrega albunes </a>
+          <a href="#" id="addAlbumLink"> Agrega un album </a>
+        </div>
+        
+        <div class="section">
+          <a href="#" id="toursLink"> Tours </a>
         </div>
         <div class="section">
-          <a href="editAlbum.html"> Editar album </a>
+          <a href="#" id="signUpLink"> Registrarse</a>
         </div>
         <div class="section">
-          <a href="addSong.html"> Agrega canciones </a>
+          <a href="#" id="logInLink"> Iniciar Sesion </a>
         </div>
-        <div class="section">
-          <a href="tours.html"> Tours </a>
-        </div>
-        <div class="section">
-          <a href="singUp.html"> Registrarse</a>
-        </div>
-        <div class="section">
-          <a href="logIn.html"> Iniciar Sesion </a>
-        </div>
-        <div class="section">
-          <a href="logIn.html"> Log out </a>
-        </div>
+        
       </div>
     </div>
     <div class="flex justify-center">
@@ -89,55 +82,10 @@
       <div
         class="mt-8 ml-40 grid gap-x-24 gap-y-10 grid-cols-2 text-black-700 justify-items-end"
       >
-        <div class="imgAlbum">
-          <a href="origins.html">
-            <img
-              src="assets/discos/origins/Origins_cover.jpg"
-              alt="Tape"
-              class="w-72 h-auto"
-              name="Origins"
-            />
-            Origins
-          </a>
-        </div>
-        <div>
-          <a href="evolve.html">
-            <img
-              src="assets/discos/evolve/EVOLVE COVER.jpg"
-              alt="Tape"
-              class="w-72"
-              name="Evolve"
-            />
-            Evolve
-          </a>
-        </div>
-
-        <div>
-          <a href="nigthVision.html">
-            <img
-              src="assets/discos/nigthVision/zuyerphzzf04b_600.jpg"
-              alt="Tape"
-              class="w-72"
-              name="Nigth Vision"
-            />
-            Night Vision
-          </a>
-        </div>
-
-        <div>
-          <a href="smokeMirrors.html">
-            <img
-              src="assets/discos/smokeMirrors/0060254762377_600.jpg"
-              alt="Tape"
-              class="w-72"
-              name="Smoke Mirrors"
-            />
-            Smoke Mirrors
-          </a>
-        </div>
       </div>
     </div>
-
-    <script src="scripts/favs.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
