--- a/PlataformaDisco/public/nigthVision.html
+++ b/PlataformaDisco/public/nigthVision.html
@@ -57,7 +57,7 @@
     <div class="Evolve">
       <h2>Album Nigth vision</h2>
       <img
-        src="assets/discos/nigthVision/zuyerphzzf04b_600.jpg"
+        src="assets/tapas/Nigth.jpg"
         alt="AlbumNigthVision"
         class="imgEvolve"
       />
@@ -183,5 +183,7 @@
         </li>
       </ol>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/public/scripts/album.js"></script>
   </body>
 </html>
