--- a/PlataformaDisco/public/logIn.html
+++ b/PlataformaDisco/public/logIn.html
@@ -52,6 +52,7 @@
         </p>
       </form>
     </div>
-    <script src="scripts/valueForm.js"></script>
+    <script src="scripts/logIn.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
