--- a/PlataformaDisco/public/origins.html
+++ b/PlataformaDisco/public/origins.html
@@ -57,7 +57,7 @@
     <div class="Evolve">
       <h2>Album Origins</h2>
       <img
-        src="assets/discos/origins/Origins_cover.jpg"
+        src="assets/tapas/Origins.jpg"
         alt="AlbumOrigin"
         class="imgEvolve"
       />
@@ -176,5 +176,9 @@
         </li>
       </ol>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>  
+    <script src="/public/scripts/album.js"></script>
   </body>
 </html>
+
+
