--- a/PlataformaDisco/public/singUp.html
+++ b/PlataformaDisco/public/singUp.html
@@ -72,7 +72,8 @@
           <button type="submit" class="submit" id="cancelar">Cancelar</button>
         </form>
       </div>
-      <script src="scripts/valueForm.js"></script>
+      <script src="scripts/singUp.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     </body>
   </html>
 
