--- a/PlataformaDisco/public/smokeMirrors.html
+++ b/PlataformaDisco/public/smokeMirrors.html
@@ -57,7 +57,7 @@
     <div class="Evolve">
       <h2>Album Smoke + Mirrors</h2>
       <img
-        src="assets/discos/smokeMirrors/0060254762377_600.jpg"
+        src="assets/tapas/Smoke.jpg"
         alt="AlbumSmokeMirrors"
         class="imgEvolve"
       />
@@ -191,5 +191,7 @@
         </li>
       </ol>
     </div>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="/public/scripts/album.js"></script>
   </body>
 </html>
