--- a/PlataformaDisco/public/tours.html
+++ b/PlataformaDisco/public/tours.html
@@ -93,5 +93,6 @@
       </div>
     </div>
     <script src="scripts/tours.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
